# proj_FastAPI_Crud

./: README.md  pyproject.toml
backend/: crud.py  database.py  main.py
